src/components/ExtendCorrection/ExtendedCorrection.css
@media all {
  .page-break {
    display: none;
  }
  .print-only {
    display: none;
  }
}

@media print {
  @page {
    size: A4;
    margin: 20mm !important;
  }
  html,
  body {
    height: initial !important;
    overflow: initial !important;
    -webkit-print-color-adjust: exact;
    print-color-adjust: exact;

  }
  .page-break {
    margin-top: 1rem;
    display: block;
    page-break-before: always !important;
  }
  .print-only {
    display: block;
  }
  div {
    break-inside: avoid;
  }
  .do-not-print {
    display: none !important;
  }
}

